tests/contract_testcases/substrate/libraries/restrictions_02.sol

        library c {
            fallback() internal {}
        }
// ---- Expect: diagnostics ----
// error: 3:13-32: fallback not allowed in a library
